--- a/about.html
+++ b/about.html
@@ -17,16 +17,16 @@
       <nav>
         <label class="logo"
           ><a href="index.html"
-            ><img src="images/logo1.png" alt="EnterpriseNGR_Logo" /></a
+            ><img src="/images/logo1.png" alt="EnterpriseNGR_Logo" /></a
         ></label>
         <ul id="menu">
-          <li><a href="about.html" class="active">About Us</a></li>
-          <li><a href="agenda.html">Our Agenda</a></li>
-          <li><a href="member.html">Membership</a></li>
-          <li><a href="policy.html">Policy & Research</a></li>
-          <li><a href="greenstart.html">Youth of Enterprise</a></li>
-          <li><a href="news.html">Media & Events</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="/about.html" class="active">About Us</a></li>
+          <li><a href="/agenda.html">Our Agenda</a></li>
+          <li><a href="/member.html">Membership</a></li>
+          <li><a href="/policy.html">Policy & Research</a></li>
+          <li><a href="/greenstart.html">Youth of Enterprise</a></li>
+          <li><a href="/news.html">Media & Events</a></li>
+          <li><a href="/contact.html">Contact Us</a></li>
         </ul>
         <label id="menu-icon">
           <i class="fas fa-bars"></i>
@@ -50,7 +50,7 @@
 
       <div class="economy_grid">
         <div class="img">
-          <img src="images/about001.png" alt="Economy" />
+          <img src="/images/about001.png" alt="Economy" />
         </div>
 
         <div class="economy_description about">
@@ -124,7 +124,7 @@
             </div>
           </div>
           <div class="img">
-            <img src="images/about0002.png" alt="Economy" />
+            <img src="/images/about0002.png" alt="Economy" />
           </div>
         </div>
       </div>
@@ -132,7 +132,7 @@
       <div class="economy">
         <div class="economy_grid">
           <div class="img">
-            <img src="images/about1.png" alt="Economy" />
+            <img src="/images/about1.png" alt="Economy" />
           </div>
 
           <div class="economy_description">
@@ -199,7 +199,7 @@
         </div>
 
         <div class="img history">
-          <img src="images/about_how_started.png" alt="Economy" />
+          <img src="/images/about_how_started.png" alt="Economy" />
         </div>
       </div>
     </section>
@@ -272,7 +272,7 @@
           <div class="cards">
             <div class="card">
               <div class="image">
-                <img src="images/aigboje.png" alt="" />
+                <img src="/images/aigboje.png" alt="" />
               </div>
               <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
               <div class="bold">Chairman</div>
@@ -281,7 +281,7 @@
 
             <div class="card">
               <div class="image">
-                <img src="images/Obi_Ibekwe.png" alt="Obi Ibekwe" />
+                <img src="/images/Obi_Ibekwe.png" alt="Obi Ibekwe" />
               </div>
               <div class="sm_heading">Obi Ibekwe</div>
               <div class="bold">Chief Executive Officer</div>
@@ -290,7 +290,7 @@
 
             <div class="card">
               <div class="image">
-                <img src="images/banjo.png" alt="Banjo Adegbohungbe" />
+                <img src="/images/banjo.png" alt="Banjo Adegbohungbe" />
               </div>
               <div class="sm_heading">Banjo Adegbohungbe</div>
               <div class="bold">Director</div>
@@ -299,16 +299,16 @@
 
             <div class="card">
               <div class="image">
-                <img src="images/bola.png" alt="Bola Onadele" />
+                <img src="/images/bola.png" alt="Bola Onadele" />
               </div>
-              <div class="sm_heading">Bola Onadele Koko</div>
+              <div class="sm_heading">Bola Onadele.Koko.</div>
               <div class="bold">Director</div>
               <div class="bold">CEO, FMDQ Group</div>
             </div>
 
             <div class="card">
               <div class="image">
-                <img src="images/bolaji.png" alt="Bolaji Balogun" />
+                <img src="/images/bolaji.png" alt="Bolaji Balogun" />
               </div>
               <div class="sm_heading">Bolaji Balogun</div>
               <div class="bold">Director</div>
@@ -326,7 +326,7 @@
 
             <div class="card">
               <div class="image">
-                <img src="images/kayode.png" alt="" />
+                <img src="/images/kayode.png" alt="" />
               </div>
               <div class="sm_heading">Kayode Akinkugbe</div>
               <div class="bold">Director</div>
@@ -335,7 +335,7 @@
 
             <div class="card">
               <div class="image">
-                <img src="images/oscar.png" alt="" />
+                <img src="/images/oscar.png" alt="" />
               </div>
               <div class="sm_heading">Oscar Onyema</div>
               <div class="bold">Director</div>
@@ -358,7 +358,7 @@
           <div class="cards">
             <div class="card">
               <div class="image">
-                <img src="images/ObiIbekwe.png" alt="" />
+                <img src="/images/ObiIbekwe.png" alt="" />
               </div>
               <div class="sm_heading">Obi Ibekwe</div>
               <div class="bold">Chief Executive Officer</div>
@@ -366,7 +366,7 @@
 
             <div class="card">
               <div class="image">
-                <img src="images/lamiadekola.png" alt="" />
+                <img src="/images/lamiadekola.png" alt="" />
               </div>
               <div class="sm_heading">Lami Adekola</div>
               <div class="bold">Director, Policy & Public Affairs</div>
@@ -382,7 +382,7 @@
 
             <div class="card">
               <div class="image">
-                <img src="images/sochiazuh.png" alt="" />
+                <img src="/images/sochiazuh.png" alt="" />
               </div>
               <div class="sm_heading">Sochi Azuh</div>
               <div class="bold">Head, Corporate Communications & Branding</div>
@@ -390,7 +390,7 @@
 
             <div class="card">
               <div class="image">
-                <img src="images/tayomuritala.png" alt="" />
+                <img src="/images/tayomuritala.png" alt="" />
               </div>
               <div class="sm_heading">Tayo Muritala</div>
               <div class="bold">Head, Research</div>
@@ -398,10 +398,10 @@
 
             <div class="card">
               <div class="image">
-                <img src="images/ogennaife.png" alt="" />
+                <img src="/images/ogennaife.png" alt="" />
               </div>
               <div class="sm_heading">Oge Nnaife</div>
-              <div class="bold">Head of Programmes</div>
+              <div class="bold">Head, Programmes</div>
             </div>
           </div>
         </div>
@@ -412,7 +412,7 @@
       <div class="popup_modal">
         <div class="grid">
           <div class="image">
-            <img src="images/aigboje.png" alt="Aigboje Aig-Imoukhuede" />
+            <img src="/images/aigboje.png" alt="Aigboje Aig-Imoukhuede" />
           </div>
           <div>
             <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
@@ -433,7 +433,7 @@
       <div class="popup_modal">
         <div class="grid">
           <div class="image">
-            <img src="images/Obi_Ibekwe.png" alt="Obi Ibekwe" />
+            <img src="/images/Obi_Ibekwe.png" alt="Obi Ibekwe" />
           </div>
           <div>
             <div class="sm_heading">Obi Ibekwe</div>
@@ -461,7 +461,7 @@
       <div class="popup_modal">
         <div class="grid">
           <div class="image">
-            <img src="images/banjo.png" alt="Banjo Adegbohungbe" />
+            <img src="/images/banjo.png" alt="Banjo Adegbohungbe" />
           </div>
           <div>
             <div class="sm_heading">Banjo Adegbohungbe</div>
@@ -478,7 +478,7 @@
       <div class="popup_modal">
         <div class="grid">
           <div class="image">
-            <img src="images/bola.png" alt="Bola Onadele Koko" />
+            <img src="/images/bola.png" alt="Bola Onadele Koko" />
           </div>
           <div>
             <div class="sm_heading">Bola "Koko" Onadele</div>
@@ -495,7 +495,7 @@
       <div class="popup_modal">
         <div class="grid">
           <div class="image">
-            <img src="images/bolaji.png" alt="Bolaji Balogun" />
+            <img src="/images/bolaji.png" alt="Bolaji Balogun" />
           </div>
           <div>
             <div class="sm_heading">Bolaji Balogun</div>
@@ -514,7 +514,7 @@
       <div class="popup_modal">
         <div class="grid">
           <div class="image">
-            <img src="images/gbenga.png" alt="Gbenga Oyebode" />
+            <img src="/images/gbenga.png" alt="Gbenga Oyebode" />
           </div>
           <div>
             <div class="sm_heading">Gbenga Oyebode</div>
@@ -533,7 +533,7 @@
       <div class="popup_modal">
         <div class="grid">
           <div class="image">
-            <img src="images/kayode.png" alt="Kayode Akinkugbe" />
+            <img src="/images/kayode.png" alt="Kayode Akinkugbe" />
           </div>
           <div>
             <div class="sm_heading">Kayode Akinkugbe</div>
@@ -552,7 +552,7 @@
       <div class="popup_modal">
         <div class="grid">
           <div class="image">
-            <img src="images/oscar.png" alt="Oscar Onyema" />
+            <img src="/images/oscar.png" alt="Oscar Onyema" />
           </div>
           <div>
             <div class="sm_heading">Oscar Onyema</div>
@@ -571,7 +571,7 @@
       <div class="popup_modal">
         <div class="grid">
           <div class="image">
-            <img src="images/ObiIbekwe.png" alt="Obi Ibekwe" />
+            <img src="/images/ObiIbekwe.png" alt="Obi Ibekwe" />
           </div>
           <div>
             <div class="sm_heading">Obi Ibekwe</div>
@@ -598,7 +598,7 @@
       <div class="popup_modal">
         <div class="grid">
           <div class="image">
-            <img src="images/lamiadekola.png" alt="Lami Adekola" />
+            <img src="/images/lamiadekola.png" alt="Lami Adekola" />
           </div>
           <div>
             <div class="sm_heading">Lami Adekola</div>
@@ -626,7 +626,7 @@
         <div class="grid">
           <div class="image">
             <img
-              src="images/uchechiakinwale.png"
+              src="/images/uchechiakinwale.png"
               alt="Uchechi Oluwole-Akinwale"
             />
           </div>
@@ -653,7 +653,7 @@
       <div class="popup_modal">
         <div class="grid">
           <div class="image">
-            <img src="images/sochiazuh.png" alt="Sochi Azuh" />
+            <img src="/images/sochiazuh.png" alt="Sochi Azuh" />
           </div>
           <div>
             <div class="sm_heading">Sochi Azuh</div>
@@ -671,7 +671,7 @@
       <div class="popup_modal">
         <div class="grid">
           <div class="image">
-            <img src="images/tayomuritala.png" alt="Tayo Muritala" />
+            <img src="/images/tayomuritala.png" alt="Tayo Muritala" />
           </div>
           <div>
             <div class="sm_heading">Tayo Muritala</div>
@@ -698,7 +698,7 @@
       <div class="popup_modal">
         <div class="grid">
           <div class="image">
-            <img src="images/ogennaife.png" alt="Oge Nnaife" />
+            <img src="/images/ogennaife.png" alt="Oge Nnaife" />
           </div>
           <div>
             <div class="sm_heading">Oge Nnaife</div>
@@ -733,7 +733,7 @@
           Annual event that brings together key Nigerian and global industry
           stakeholders and policy makers from all levels of government.
         </div>
-        <a href="greenstart.html"
+        <a href="/greenstart.html"
           ><button class="md_btn">
             <span
               class="iconify"
@@ -772,7 +772,7 @@
             development and transformation of Nigeria’s Financial and
             Professional Services (FPS) Sector.
           </div>
-          <a href="member.html">
+          <a href="/member.html">
             <button class="md_btn">
               <span
                 class="iconify"
@@ -789,7 +789,7 @@
 
     <footer>
       <div class="contact_info">
-        <div><img src="images/EnterpriseNGRLogo.png" /></div>
+        <div><img src="/images/EnterpriseNGRLogo.png" /></div>
         <div class="column">
           <div class="phone">+234 912 883 2451</div>
           <div>contactus@enterprisengr.com</div>
@@ -798,23 +798,23 @@
           </div>
         </div>
         <div class="column">
-          <div><a href="agenda.html">Our Agenda</a></div>
-          <div><a href="member.html">Membership</a></div>
-          <div><a href="policy.html">Policy & Research</a></div>
-          <div><a href="news.html">News & Events</a></div>
+          <div><a href="/agenda.html">Our Agenda</a></div>
+          <div><a href="/member.html">Membership</a></div>
+          <div><a href="/policy.html">Policy & Research</a></div>
+          <div><a href="/news.html">News & Events</a></div>
         </div>
         <div class="column">
-          <div><a href="contact.html">Contact Us</a></div>
-          <div><a href="about.html">About EnterpriseNGR</a></div>
+          <div><a href="/contact.html">Contact Us</a></div>
+          <div><a href="/about.html">About EnterpriseNGR</a></div>
           <div class="social_icons">
             <div class="item">
               <a href="https://web.facebook.com/EnterpriseNGR1"
-                ><img src="images/Vector.png" alt=""
+                ><img src="/images/Vector.png" alt=""
               /></a>
             </div>
             <div class="item">
               <a href="https://instagram.com/enterprisengr"
-                ><img src="images/ig.png" alt=""
+                ><img src="/images/ig.png" alt=""
               /></a>
             </div>
             <div class="item">
@@ -822,7 +822,7 @@
             </div>
             <div class="item">
               <a href="https://www.linkedin.com/company/enterprisengr/"
-                ><img src="images/linkedin.png" alt=""
+                ><img src="/images/linkedin.png" alt=""
               /></a>
             </div>
           </div>
@@ -834,7 +834,7 @@
       </div>
     </footer>
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/about.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/about.js"></script>
   </body>
 </html>
