--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style/main.css" />
+  <link rel="stylesheet" href="/style/main.css" />
   <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 />
   <title>EnterpriseNGR</title>
-  <link rel="icon" type="image/x-icon" href="/images/logo1.png" />
+  <link rel="icon" type="image/x-icon" href="/images/logo1.png">
 
 </head>
 
@@ -45,15 +45,18 @@
       </nav>
     </div> -->
     <nav>
-      <label class="logo"><a href="index.html"><img src="images/logo1.png" alt="EnterpriseNGR_Logo"></a></label>
+      <label class="logo"
+        ><a href="index.html"
+          ><img src="/images/logo1.png" alt="EnterpriseNGR_Logo" /></a
+      ></label>
       <ul id="menu">
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="agenda.html">Our Agenda</a></li>
-        <li><a href="member.html">Membership</a></li>
-        <li><a href="policy.html">Policy & Research</a></li>
-        <li><a href="greenstart.html">Youth of Enterprise</a></li>
-        <li><a href="news.html">Media & Events</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="/about.html" >About Us</a></li>
+        <li><a href="/agenda.html">Our Agenda</a></li>
+        <li><a href="/member.html">Membership</a></li>
+        <li><a href="/policy.html">Policy & Research</a></li>
+        <li><a href="/greenstart.html">Youth of Enterprise</a></li>
+        <li><a href="/news.html">Media & Events</a></li>
+        <li><a href="/contact.html">Contact Us</a></li>
       </ul>
       <label id="menu-icon">
         <i class="fas fa-bars"></i>
@@ -67,7 +70,7 @@
         EnterpriseNGR is a member-led advocacy group that promotes the growth and development of Nigeria’s Financial and Professional Services (FPS) sector.
       </p>
       <div>
-        <a href="about.html"><button class="big_btn">
+        <a href="/about.html"><button class="big_btn">
           <span class="iconify-inline" data-icon="bi:arrow-right-circle" style="color: #40ba7b" data-width="29"
             data-height="29"></span>
           <span class="btn_text">More About Us</span>
@@ -84,7 +87,7 @@
 
     <div class="economy_grid">
       <div class="img">
-        <img src="images/economy.png" alt="Economy" />
+        <img src="/images/economy.png" alt="Economy" />
       </div>
 
       <div class="economy_description">
@@ -94,7 +97,7 @@
         <div class="thin">
           Nigeria has the potential to be Africa’s premier financial center.  To realize this potential, however, the Nigerian FPS sector needs to work collaboratively in a deliberate, concerted effort to foster an enabling and stable policy environment that promotes an open market and competitiveness.
         </div>
-        <a href="about.html">  <button class="big_btn">
+        <a href="/about.html">  <button class="big_btn">
           <span class="iconify-inline" data-icon="bi:arrow-right-circle" style="color: #40ba7b" data-width="29"
             data-height="29"></span>
           <span class="btn_text">Learn More</span>
@@ -111,7 +114,7 @@
     <div class="thin">
       EnterpriseNGR is positioned to engage in both private sector and public sector advocacy with the aim of fostering a favourable operating environment for the Financial and Professional Services sector and championing the transformation of Nigeria into an international financial center.
     </div>
-    <a href="about.html">  <button class="big_btn">
+    <a href="/about.html">  <button class="big_btn">
       <span class="iconify-inline" data-icon="bi:arrow-right-circle" style="color: #40ba7b" data-width="29"
         data-height="29"></span>
       <span class="btn_text">Learn More</span>
@@ -143,12 +146,12 @@
         </div> -->
         <div class="card">
           <div class="image">
-            <img src="images/yoe-invitation-img.png" alt="" />
+            <img src="/images/yoe-invitation-img.png" alt="" />
           </div>
           <div class="sm_heading text">4 May, 2022</div>
           <div class="bold text">Youth of Enterprise (YOE) Internship Programme Launch</div>
           <div class="text">
-            <a href="internshiplaunch.html"><button class="md_btn">
+            <a href="/internshiplaunch.html"><button class="md_btn">
               <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: black;" data-width="26"></span>
               <span class="btn_text">Read More</span>
             </button></a>
@@ -169,7 +172,7 @@
       <div class="thin">
         The latest research and thought leadership on important topics impacting the Nigerian Financial and Professional Services sector.
       </div>
-      <a href="policy.html"> <button class="md_btn">
+      <a href="/policy.html"> <button class="md_btn">
         <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: black;" data-width="26"></span><span
           class="btn_text">View All</span>
       </button></a>
@@ -185,7 +188,7 @@
           
         </div>
         <div>
-          <a href="unemploymentstate.html"><button class="md_btn">
+          <a href="/unemploymentstate.html"><button class="md_btn">
             <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: black;"
               data-width="26"></span><span class="btn_text">Read More</span>
           </button></a>
@@ -199,7 +202,7 @@
           
         </div>
         <div>
-          <a href="policyinsight.html"><button class="md_btn">
+          <a href="/policyinsight.html"><button class="md_btn">
             <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: black;"
               data-width="26"></span><span class="btn_text">Read More</span>
           </button></a>
@@ -220,7 +223,7 @@
       <div class="thin">
         Annual event that brings together key Nigerian and global industry stakeholders and policy makers from all levels of government.
       </div>
-      <a href="greenstart.html"><button class="md_btn">
+      <a href="/greenstart.html"><button class="md_btn">
         <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: black;" data-width="26"></span><span
           class="btn_text">Learn More</span>
       </button></a>
@@ -246,7 +249,7 @@
         <div class="card_description">
           EnterpriseNGR Internship programme aimed at empowering the next generation of workplace talent.
         </div>
-        <a href="greenstart.html"><button class="md_btn">
+        <a href="/greenstart.html"><button class="md_btn">
           <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: black;"
             data-width="26"></span><span class="btn_text">Read More</span>
         </button></a>
@@ -276,7 +279,7 @@
         <div class="text">
           Join our network of members at the forefront of advancing the development and transformation of Nigeria’s Financial and Professional Services (FPS) Sector.
         </div>
-        <a href="member.html"><button class="md_btn">
+        <a href="/member.html"><button class="md_btn">
           <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: #40ba7b;"
             data-width="26"></span><span class="btn_text">Learn More</span>
         </button></a>
@@ -288,7 +291,7 @@
 
   <footer>
     <div class="contact_info">
-      <div><img src="images/EnterpriseNGRLogo.png" /></div>
+      <div><img src="/images/EnterpriseNGRLogo.png" /></div>
       <div class="column">
         <div class="phone">+234 912 883 2451</div>
         <div>contactus@enterprisengr.com</div>
@@ -297,31 +300,31 @@
         </div>
       </div>
       <div class="column">
-        <div><a href="agenda.html">Our Agenda</a></div>
-        <div><a href="member.html">Membership</a></div>
-        <div><a href="policy.html">Policy & Research</a></div>
-        <div><a href="news.html">News & Events</a></div>
+        <div><a href="/agenda.html">Our Agenda</a></div>
+        <div><a href="/member.html">Membership</a></div>
+        <div><a href="/policy.html">Policy & Research</a></div>
+        <div><a href="/news.html">News & Events</a></div>
       </div>
       <div class="column">
-        <div><a href="contact.html">Contact Us</a></div>
-        <div><a href="about.html">About EnterpriseNGR</a></div>
+        <div><a href="/contact.html">Contact Us</a></div>
+        <div><a href="/about.html">About EnterpriseNGR</a></div>
         <div class="social_icons">
           <div class="item">
             <a href="https://web.facebook.com/EnterpriseNGR1"
-              ><img src="images/Vector.png" alt=""
+              ><img src="/images/Vector.png" alt=""
             /></a>
           </div>
           <div class="item">
             <a href="https://instagram.com/enterprisengr"
-              ><img src="images/ig.png" alt=""
+              ><img src="/images/ig.png" alt=""
             /></a>
           </div>
           <div class="item">
-            <a href=""><img src="images/twitter.png" alt="" /></a>
+            <a href=""><img src="/images/twitter.png" alt="" /></a>
           </div>
           <div class="item">
             <a href="https://www.linkedin.com/company/enterprisengr/"
-              ><img src="images/linkedin.png" alt=""
+              ><img src="/images/linkedin.png" alt=""
             /></a>
           </div>
         </div>
@@ -333,7 +336,7 @@
     </div>
   </footer>
   <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/js/main.js"></script>
 </body>
 
 </html>
