--- a/agenda.html
+++ b/agenda.html
@@ -17,16 +17,16 @@
       <nav>
         <label class="logo"
           ><a href="index.html"
-            ><img src="images/logo1.png" alt="EnterpriseNGR_Logo" /></a
+            ><img src="/images/logo1.png" alt="EnterpriseNGR_Logo" /></a
         ></label>
         <ul id="menu">
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="agenda.html" class="active">Our Agenda</a></li>
-          <li><a href="member.html">Membership</a></li>
-          <li><a href="policy.html">Policy & Research</a></li>
-          <li><a href="greenstart.html">Youth of Enterprise</a></li>
-          <li><a href="news.html">Media & Events</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="/about.html">About Us</a></li>
+          <li><a href="/agenda.html" class="active">Our Agenda</a></li>
+          <li><a href="/member.html">Membership</a></li>
+          <li><a href="/policy.html">Policy & Research</a></li>
+          <li><a href="/greenstart.html">Youth of Enterprise</a></li>
+          <li><a href="/news.html">Media & Events</a></li>
+          <li><a href="/contact.html">Contact Us</a></li>
         </ul>
         <label id="menu-icon">
           <i class="fas fa-bars"></i>
@@ -51,7 +51,7 @@
 
       <div class="economy_grid">
         <div class="img">
-          <img src="images/agenda1.png" alt="Economy" />
+          <img src="/images/agenda1.png" alt="Economy" />
         </div>
 
         <div class="economy_description">
@@ -116,7 +116,7 @@
             We aim to advance this agenda by actively collaborating with our
             members, industry partners, government regulators, and stakeholders.
           </div>
-          <a href="about.html">
+          <a href="/about.html">
             <button class="big_btn">
               <span
                 class="iconify-inline"
@@ -192,7 +192,7 @@
             development and transformation of Nigeria’s Financial and
             Professional Services (FPS) Sector.
           </div>
-          <a href="member.html"
+          <a href="/member.html"
             ><button class="md_btn">
               <span
                 class="iconify"
@@ -299,14 +299,14 @@
           </div> -->
           <div class="card">
             <div class="image">
-              <img src="images/yoe-invitation-img.png" alt="" />
+              <img src="/images/yoe-invitation-img.png" alt="" />
             </div>
             <div class="sm_heading text">4 May, 2022</div>
             <div class="bold text">
               Youth of Enterprise (YOE) Internship Programme Launch
             </div>
             <div class="text">
-              <a href="internshiplaunch.html"
+              <a href="/internshiplaunch.html"
                 ><button class="md_btn">
                   <span
                     class="iconify"
@@ -336,7 +336,7 @@
           Annual event that brings together key Nigerian and global industry
           stakeholders and policy makers from all levels of government.
         </div>
-        <a href="greenstart.html"
+        <a href="/greenstart.html"
           ><button class="md_btn">
             <span
               class="iconify"
@@ -368,7 +368,7 @@
 
     <footer>
       <div class="contact_info">
-        <div><img src="images/EnterpriseNGRLogo.png" /></div>
+        <div><img src="/images/EnterpriseNGRLogo.png" /></div>
         <div class="column">
           <div class="phone">+234 912 883 2451</div>
           <div>contactus@enterprisengr.com</div>
@@ -377,27 +377,27 @@
           </div>
         </div>
         <div class="column">
-          <div><a href="agenda.html">Our Agenda</a></div>
-          <div><a href="member.html">Membership</a></div>
-          <div><a href="policy.html">Policy & Research</a></div>
-          <div><a href="news.html">News & Events</a></div>
+          <div><a href="/agenda.html">Our Agenda</a></div>
+          <div><a href="/member.html">Membership</a></div>
+          <div><a href="/policy.html">Policy & Research</a></div>
+          <div><a href="/news.html">News & Events</a></div>
         </div>
         <div class="column">
-          <div><a href="contact.html">Contact Us</a></div>
-          <div><a href="about.html">About EnterpriseNGR</a></div>
+          <div><a href="/contact.html">Contact Us</a></div>
+          <div><a href="/about.html">About EnterpriseNGR</a></div>
           <div class="social_icons">
             <div class="item">
               <a href="https://web.facebook.com/EnterpriseNGR1"
-                ><img src="images/Vector.png" alt=""
+                ><img src="/images/Vector.png" alt=""
               /></a>
             </div>
             <div class="item">
               <a href="https://instagram.com/enterprisengr"
-                ><img src="images/ig.png" alt=""
+                ><img src="/images/ig.png" alt=""
               /></a>
             </div>
             <div class="item">
-              <a href=""><img src="images/twitter.png" alt="" /></a>
+              <a href=""><img src="/images/twitter.png" alt="" /></a>
             </div>
             <div class="item">
               <a href="https://www.linkedin.com/company/enterprisengr/"
@@ -413,6 +413,6 @@
       </div>
     </footer>
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
