--- a/greenstart.html
+++ b/greenstart.html
@@ -17,18 +17,18 @@
       <nav>
         <label class="logo"
           ><a href="index.html"
-            ><img src="images/logo1.png" alt="EnterpriseNGR_Logo" /></a
+            ><img src="/images/logo1.png" alt="EnterpriseNGR_Logo" /></a
         ></label>
         <ul id="menu">
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="agenda.html">Our Agenda</a></li>
-          <li><a href="member.html">Membership</a></li>
-          <li><a href="policy.html">Policy & Research</a></li>
+          <li><a href="/about.html">About Us</a></li>
+          <li><a href="/agenda.html">Our Agenda</a></li>
+          <li><a href="/member.html">Membership</a></li>
+          <li><a href="/policy.html">Policy & Research</a></li>
           <li>
-            <a href="greenstart.html" class="active">Youth of Enterprise</a>
+            <a href="/greenstart.html" class="active">Youth of Enterprise</a>
           </li>
-          <li><a href="news.html">Media & Events</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="/news.html">Media & Events</a></li>
+          <li><a href="/contact.html">Contact Us</a></li>
         </ul>
         <label id="menu-icon">
           <i class="fas fa-bars"></i>
@@ -162,7 +162,7 @@
         </div>
 
         <div class="img">
-          <img src="images/finewoman.png" alt="Economy" />
+          <img src="/images/finewoman.png" alt="Economy" />
         </div>
       </div>
     </section>
@@ -170,7 +170,7 @@
     <section class="economy approach">
       <div class="economy_grid">
         <div class="img">
-          <img src="images/greenstart001.png" alt="Economy" />
+          <img src="/images/greenstart001.png" alt="Economy" />
         </div>
 
         <div class="economy_description">
@@ -225,7 +225,7 @@
       <div class="grid">
         <div class="item">
           <div class="image">
-            <img src="images/partnership.png" alt="" />
+            <img src="/images/partnership.png" alt="" />
           </div>
           <div class="big">PARTNERSHIP</div>
           <ul>
@@ -252,7 +252,7 @@
 
         <div class="item">
           <div class="image">
-            <img src="images/profile.png" alt="" />
+            <img src="/images/profile.png" alt="" />
           </div>
           <div class="big">ONBOARDING</div>
           <ul>
@@ -288,7 +288,7 @@
 
         <div class="item">
           <div class="image">
-            <img src="images/seo.png" alt="" />
+            <img src="/images/seo.png" alt="" />
           </div>
           <div class="big">TRAINING</div>
           <ul>
@@ -327,7 +327,7 @@
 
         <div class="item">
           <div class="image">
-            <img src="images/placement.png" alt="" />
+            <img src="/images/placement.png" alt="" />
           </div>
           <div class="big">PLACEMENT</div>
           <ul>
@@ -442,7 +442,7 @@
               Annual event that brings together key Nigerian and global industry
               stakeholders and policy makers from all levels of government.
             </div>
-            <a href="greenstart.html"
+            <a href="/greenstart.html"
               ><button class="md_btn">
                 <span
                   class="iconify"
@@ -476,7 +476,7 @@
 
     <footer>
       <div class="contact_info">
-        <div><img src="images/EnterpriseNGRLogo.png" /></div>
+        <div><img src="/images/EnterpriseNGRLogo.png" /></div>
         <div class="column">
           <div class="phone">+234 912 883 2451</div>
           <div>contactus@enterprisengr.com</div>
@@ -485,31 +485,31 @@
           </div>
         </div>
         <div class="column">
-          <div><a href="agenda.html">Our Agenda</a></div>
-          <div><a href="member.html">Membership</a></div>
-          <div><a href="policy.html">Policy & Research</a></div>
-          <div><a href="news.html">News & Events</a></div>
+          <div><a href="/agenda.html">Our Agenda</a></div>
+          <div><a href="/member.html">Membership</a></div>
+          <div><a href="/policy.html">Policy & Research</a></div>
+          <div><a href="/news.html">News & Events</a></div>
         </div>
         <div class="column">
-          <div><a href="contact.html">Contact Us</a></div>
-          <div><a href="about.html">About EnterpriseNGR</a></div>
+          <div><a href="/contact.html">Contact Us</a></div>
+          <div><a href="/about.html">About EnterpriseNGR</a></div>
           <div class="social_icons">
             <div class="item">
               <a href="https://web.facebook.com/EnterpriseNGR1"
-                ><img src="images/Vector.png" alt=""
+                ><img src="/images/Vector.png" alt=""
               /></a>
             </div>
             <div class="item">
               <a href="https://instagram.com/enterprisengr"
-                ><img src="images/ig.png" alt=""
+                ><img src="/images/ig.png" alt=""
               /></a>
             </div>
             <div class="item">
-              <a href=""><img src="images/twitter.png" alt="" /></a>
+              <a href=""><img src="/images/twitter.png" alt="" /></a>
             </div>
             <div class="item">
               <a href="https://www.linkedin.com/company/enterprisengr/"
-                ><img src="images/linkedin.png" alt=""
+                ><img src="/images/linkedin.png" alt=""
               /></a>
             </div>
           </div>
@@ -521,6 +521,6 @@
       </div>
     </footer>
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
