--- a/member.html
+++ b/member.html
@@ -17,16 +17,16 @@
       <nav>
         <label class="logo"
           ><a href="index.html"
-            ><img src="images/logo1.png" alt="EnterpriseNGR_Logo" /></a
+            ><img src="/images/logo1.png" alt="EnterpriseNGR_Logo" /></a
         ></label>
         <ul id="menu">
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="agenda.html">Our Agenda</a></li>
-          <li><a href="member.html" class="active">Membership</a></li>
-          <li><a href="policy.html">Policy & Research</a></li>
-          <li><a href="greenstart.html">Youth of Enterprise</a></li>
-          <li><a href="news.html">Media & Events</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="/about.html">About Us</a></li>
+          <li><a href="/agenda.html">Our Agenda</a></li>
+          <li><a href="/member.html" class="active">Membership</a></li>
+          <li><a href="/policy.html">Policy & Research</a></li>
+          <li><a href="/greenstart.html">Youth of Enterprise</a></li>
+          <li><a href="/news.html">Media & Events</a></li>
+          <li><a href="/contact.html">Contact Us</a></li>
         </ul>
         <label id="menu-icon">
           <i class="fas fa-bars"></i>
@@ -47,7 +47,7 @@
 
       <div class="economy_grid">
         <div class="img responsive">
-          <img src="images/member001.png" alt="Economy" />
+          <img src="/images/member001.png" alt="Economy" />
         </div>
 
         <div class="economy_description">
@@ -65,7 +65,7 @@
             Depositories, Clearing Houses, FinTech, Law, Accountancy, and
             Management Consulting.
           </div>
-          <a href="about.html"
+          <a href="/about.html"
             ><button class="big_btn">
               <span
                 class="iconify-inline"
@@ -104,7 +104,7 @@
         </div>
 
         <div class="btn_all">
-          <a href="about.html"
+          <a href="/about.html"
             ><button class="big_btn all">
               <span
                 class="iconify-inline"
@@ -237,61 +237,61 @@
       <div class="md_heading">Our Members</div>
       <div class="img_grid">
         <div class="image">
-          <img src="images/img1.png" alt="partner_logo" />
+          <img src="/images/img1.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="images/img2.png" alt="partner_logo" />
+          <img src="/images/img2.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="images/img3.jpeg" alt="partner_logo" />
+          <img src="/images/img3.jpeg" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="images/img4.jpg" alt="partner_logo" />
+          <img src="/images/img4.jpg" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="images/img5.png" alt="partner_logo" />
+          <img src="/images/img5.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="images/img6.png" alt="partner_logo" />
+          <img src="/images/img6.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="images/img7.png" alt="partner_logo" />
+          <img src="/images/img7.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="images/img8.png" alt="partner_logo" />
+          <img src="/images/img8.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="images/img9.png" alt="partner_logo" />
+          <img src="/images/img9.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="images/img10.png" alt="partner_logo" />
+          <img src="/images/img10.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="images/img11.png" alt="partner_logo" />
+          <img src="/images/img11.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="images/img12.png" alt="partner_logo" />
+          <img src="/images/img12.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="images/img13.png" alt="partner_logo" />
+          <img src="/images/img13.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="images/img14.png" alt="partner_logo" />
+          <img src="/images/img14.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="images/img15.png" alt="partner_logo" />
+          <img src="/images/img15.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="images/img16.png" alt="partner_logo" />
+          <img src="/images/img16.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="images/img17.png" alt="partner_logo" />
+          <img src="/images/img17.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="images/img18.png" alt="partner_logo" />
+          <img src="/images/img18.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="images/img19.png" alt="partner_logo" />
+          <img src="/images/img19.png" alt="partner_logo" />
         </div>
       </div>
     </section>
@@ -343,14 +343,14 @@
           </div> -->
           <div class="card">
             <div class="image">
-              <img src="images/yoe-invitation-img.png" alt="" />
+              <img src="/images/yoe-invitation-img.png" alt="" />
             </div>
             <div class="sm_heading text">4 May, 2022</div>
             <div class="bold text">
               Youth of Enterprise (YOE) Internship Programme Launch
             </div>
             <div class="text">
-              <a href="internshiplaunch.html"
+              <a href="/internshiplaunch.html"
                 ><button class="md_btn">
                   <span
                     class="iconify"
@@ -380,7 +380,7 @@
           Annual event that brings together key Nigerian and global industry
           stakeholders and policy makers from all levels of government.
         </div>
-        <a href="greenstart.html"
+        <a href="/greenstart.html"
           ><button class="md_btn">
             <span
               class="iconify"
@@ -412,7 +412,7 @@
 
     <footer>
       <div class="contact_info">
-        <div><img src="images/EnterpriseNGRLogo.png" /></div>
+        <div><img src="/images/EnterpriseNGRLogo.png" /></div>
         <div class="column">
           <div class="phone">+234 912 883 2451</div>
           <div>contactus@enterprisengr.com</div>
@@ -421,31 +421,31 @@
           </div>
         </div>
         <div class="column">
-          <div><a href="agenda.html">Our Agenda</a></div>
-          <div><a href="member.html">Membership</a></div>
-          <div><a href="policy.html">Policy & Research</a></div>
-          <div><a href="news.html">News & Events</a></div>
+          <div><a href="/agenda.html">Our Agenda</a></div>
+          <div><a href="/member.html">Membership</a></div>
+          <div><a href="/policy.html">Policy & Research</a></div>
+          <div><a href="/news.html">News & Events</a></div>
         </div>
         <div class="column">
-          <div><a href="contact.html">Contact Us</a></div>
-          <div><a href="about.html">About EnterpriseNGR</a></div>
+          <div><a href="/contact.html">Contact Us</a></div>
+          <div><a href="/about.html">About EnterpriseNGR</a></div>
           <div class="social_icons">
             <div class="item">
               <a href="https://web.facebook.com/EnterpriseNGR1"
-                ><img src="images/Vector.png" alt=""
+                ><img src="/images/Vector.png" alt=""
               /></a>
             </div>
             <div class="item">
               <a href="https://instagram.com/enterprisengr"
-                ><img src="images/ig.png" alt=""
+                ><img src="/images/ig.png" alt=""
               /></a>
             </div>
             <div class="item">
-              <a href=""><img src="images/twitter.png" alt="" /></a>
+              <a href=""><img src="/images/twitter.png" alt="" /></a>
             </div>
             <div class="item">
               <a href="https://www.linkedin.com/company/enterprisengr/"
-                ><img src="images/linkedin.png" alt=""
+                ><img src="/images/linkedin.png" alt=""
               /></a>
             </div>
           </div>
@@ -457,6 +457,6 @@
       </div>
     </footer>
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
