--- a/policy.html
+++ b/policy.html
@@ -20,13 +20,13 @@
             ><img src="/images/logo1.png" alt="EnterpriseNGR_Logo" /></a
         ></label>
         <ul id="menu">
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="agenda.html">Our Agenda</a></li>
-          <li><a href="member.html">Membership</a></li>
-          <li><a href="policy.html" class="active">Policy & Research</a></li>
-          <li><a href="greenstart.html">Youth of Enterprise</a></li>
-          <li><a href="news.html">Media & Events</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="/about.html">About Us</a></li>
+          <li><a href="/agenda.html">Our Agenda</a></li>
+          <li><a href="/member.html">Membership</a></li>
+          <li><a href="/policy.html" class="active">Policy & Research</a></li>
+          <li><a href="/greenstart.html">Youth of Enterprise</a></li>
+          <li><a href="/news.html">Media & Events</a></li>
+          <li><a href="/contact.html">Contact Us</a></li>
         </ul>
         <label id="menu-icon">
           <i class="fas fa-bars"></i>
@@ -46,7 +46,7 @@
           card divs can be left empty but should take the "card" class -->
           <div class="card">
             <div class="image">
-              <img src="images/unemployment.jpg" alt="" />
+              <img src="/images/unemployment.jpg" alt="" />
             </div>
             <div class="thin date">7 March, 2022 | EnterpriseNGR</div>
             <div class="bold title">The State of Unemployment in Nigeria</div>
@@ -71,7 +71,7 @@
           </div>
           <div class="card">
             <div class="image">
-              <img src="images/stateofngr.jpg" alt="" />
+              <img src="/images/stateofngr.jpg" alt="" />
             </div>
             <div class="thin date">23 March, 2022 | EnterpriseNGR</div>
             <div class="bold title">March 2022 Policy Insights</div>
@@ -102,7 +102,7 @@
 
     <footer>
       <div class="contact_info">
-        <div><img src="images/EnterpriseNGRLogo.png" /></div>
+        <div><img src="/images/EnterpriseNGRLogo.png" /></div>
         <div class="column">
           <div class="phone">+234 912 883 2451</div>
           <div>contactus@enterprisengr.com</div>
@@ -111,27 +111,27 @@
           </div>
         </div>
         <div class="column">
-          <div><a href="agenda.html">Our Agenda</a></div>
-          <div><a href="member.html">Membership</a></div>
-          <div><a href="policy.html">Policy & Research</a></div>
-          <div><a href="news.html">News & Events</a></div>
+          <div><a href="/agenda.html">Our Agenda</a></div>
+          <div><a href="/member.html">Membership</a></div>
+          <div><a href="/policy.html">Policy & Research</a></div>
+          <div><a href="/news.html">News & Events</a></div>
         </div>
         <div class="column">
-          <div><a href="contact.html">Contact Us</a></div>
-          <div><a href="about.html">About EnterpriseNGR</a></div>
+          <div><a href="/contact.html">Contact Us</a></div>
+          <div><a href="/about.html">About EnterpriseNGR</a></div>
           <div class="social_icons">
             <div class="item">
               <a href="https://web.facebook.com/EnterpriseNGR1"
-                ><img src="images/Vector.png" alt=""
+                ><img src="/images/Vector.png" alt=""
               /></a>
             </div>
             <div class="item">
               <a href="https://instagram.com/enterprisengr"
-                ><img src="images/ig.png" alt=""
+                ><img src="/images/ig.png" alt=""
               /></a>
             </div>
             <div class="item">
-              <a href=""><img src="images/twitter.png" alt="" /></a>
+              <a href=""><img src="/images/twitter.png" alt="" /></a>
             </div>
             <div class="item">
               <a href="https://www.linkedin.com/company/enterprisengr/"
@@ -147,6 +147,6 @@
       </div>
     </footer>
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
