--- a/policyinsight.html
+++ b/policyinsight.html
@@ -25,13 +25,13 @@
             ><img src="/images/logo1.png" alt="EnterpriseNGR_Logo" /></a
         ></label>
         <ul id="menu">
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="agenda.html">Our Agenda</a></li>
-          <li><a href="member.html">Membership</a></li>
-          <li><a href="policy.html">Policy & Research</a></li>
-          <li><a href="greenstart.html">Youth of Enterprise</a></li>
-          <li><a href="news.html">Media & Events</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="/about.html">About Us</a></li>
+          <li><a href="/agenda.html">Our Agenda</a></li>
+          <li><a href="/member.html">Membership</a></li>
+          <li><a href="/policy.html" class="active">Policy & Research</a></li>
+          <li><a href="/greenstart.html">Youth of Enterprise</a></li>
+          <li><a href="/news.html">Media & Events</a></li>
+          <li><a href="/contact.html">Contact Us</a></li>
         </ul>
         <label id="menu-icon">
           <i class="fas fa-bars"></i>
@@ -49,7 +49,7 @@
     <article class="article">
       <div class="article_body">
         <div class="image">
-          <img src="images/stateofngr.jpg" alt="" />
+          <img src="/images/stateofngr.jpg" alt="" />
         </div>
         <div class="article_detail">
           <div class="child green">Policy Insights |</div>
@@ -257,13 +257,13 @@
           <div class="text">Share this article</div>
           <div class="social_icons">
             <div class="item">
-              <a href=""><img src="images/Vector.png" alt="" /></a>
+              <a href=""><img src="/images/Vector.png" alt="" /></a>
             </div>
             <div class="item">
-              <a href=""><img src="images/ig.png" alt="" /></a>
+              <a href=""><img src="/images/ig.png" alt="" /></a>
             </div>
             <div class="item">
-              <a href=""><img src="images/twitter.png" alt="" /></a>
+              <a href=""><img src="/images/twitter.png" alt="" /></a>
             </div>
           </div>
         </div>
@@ -310,14 +310,14 @@
           </div> -->
           <div class="card">
             <div class="image">
-              <img src="images/yoe-invitation-img.png" alt="" />
+              <img src="/images/yoe-invitation-img.png" alt="" />
             </div>
             <div class="sm_heading text">4 May, 2022</div>
             <div class="bold text">
               Youth of Enterprise (YOE) Internship Programme Launch
             </div>
             <div class="text">
-              <a href="internshiplaunch.html"
+              <a href="/internshiplaunch.html"
                 ><button class="md_btn">
                   <span
                     class="iconify"
@@ -339,7 +339,7 @@
 
     <footer>
       <div class="contact_info">
-        <div><img src="images/EnterpriseNGRLogo.png" /></div>
+        <div><img src="/images/EnterpriseNGRLogo.png" /></div>
         <div class="column">
           <div class="phone">+234 912 883 2451</div>
           <div>contactus@enterprisengr.com</div>
@@ -348,31 +348,31 @@
           </div>
         </div>
         <div class="column">
-          <div><a href="agenda.html">Our Agenda</a></div>
-          <div><a href="member.html">Membership</a></div>
-          <div><a href="policy.html">Policy & Research</a></div>
-          <div><a href="news.html">News & Events</a></div>
+          <div><a href="/agenda.html">Our Agenda</a></div>
+          <div><a href="/member.html">Membership</a></div>
+          <div><a href="/policy.html">Policy & Research</a></div>
+          <div><a href="/news.html">News & Events</a></div>
         </div>
         <div class="column">
-          <div><a href="contact.html">Contact Us</a></div>
-          <div><a href="about.html">About EnterpriseNGR</a></div>
+          <div><a href="/contact.html">Contact Us</a></div>
+          <div><a href="/about.html">About EnterpriseNGR</a></div>
           <div class="social_icons">
             <div class="item">
               <a href="https://web.facebook.com/EnterpriseNGR1"
-                ><img src="images/Vector.png" alt=""
+                ><img src="/images/Vector.png" alt=""
               /></a>
             </div>
             <div class="item">
               <a href="https://instagram.com/enterprisengr"
-                ><img src="images/ig.png" alt=""
+                ><img src="/images/ig.png" alt=""
               /></a>
             </div>
             <div class="item">
-              <a href=""><img src="images/twitter.png" alt="" /></a>
+              <a href=""><img src="/images/twitter.png" alt="" /></a>
             </div>
             <div class="item">
               <a href="https://www.linkedin.com/company/enterprisengr/"
-                ><img src="images/linkedin.png" alt=""
+                ><img src="/images/linkedin.png" alt=""
               /></a>
             </div>
           </div>
@@ -383,7 +383,7 @@
         <div>© 2022 EnterpriseNGR - All Rights Reserved</div>
       </div>
     </footer>
-    <script src="js/main.js"></script>
+    <script src="/js/main.js"></script>
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
   </body>
 </html>
