--- a/agenda.html
+++ b/agenda.html
@@ -58,8 +58,8 @@
           <div class="bold">
             Our pursuit of recognizable success in our priority areas will be
             supported by strong and reliable research and data insights – all
-            aimed at supporting the growth of the Nigerian FPS sector and
-            positioning it as a leading financial centre in Africa.
+            aimed at supporting the growth of Nigeria’s FPS sector and
+            positioning it as a leading financial center in Africa.
           </div>
 
           <div class="thin text">Key Priority Areas:</div>
@@ -333,8 +333,9 @@
           <div>Voice of Enterprise</div>
         </div>
         <div class="thin">
-          Annual event that brings together key Nigerian and global industry
-          stakeholders and policy makers from all levels of government.
+          Annual EnterpriseNGR event to engage key industry stakeholders (both
+          globally and in Nigeria) as well as policymakers at all levels of
+          government.
         </div>
         <a href="/greenstart.html"
           ><button class="md_btn">
