--- a/greenstart.html
+++ b/greenstart.html
@@ -152,7 +152,8 @@
             The National Population Commission places Nigeria’s population at
             about 220 million with 50% of the population comprising youth.
             Unfortunately, over 42% of Nigerian youth remain unemployed and a
-            larger percentage are underemployed.
+            larger percentage are underemployed (Source: Nigerian Bureau of
+            Statistics).
           </div>
           <div class="thin">
             With the YOE Internship Programme we seek to improve the
@@ -439,8 +440,9 @@
               <div>Voice of Enterprise</div>
             </div>
             <div class="thin">
-              Annual event that brings together key Nigerian and global industry
-              stakeholders and policy makers from all levels of government.
+              Annual EnterpriseNGR event to engage key industry stakeholders
+              (both globally and in Nigeria) as well as policymakers at all
+              levels of government.
             </div>
             <a href="/greenstart.html"
               ><button class="md_btn">
