--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
       </div>
       <div class="card">
         <div class="sm_heading">23 March, 2022</div>
-        <div class="report">March 2022 Policy Insights</div>
+        <div class="report">Environmental, Social and Governance - the Urgency of the Implementation</div>
         <div class="btns">
           
         </div>
@@ -247,7 +247,7 @@
       <div class="card">
         <div class="md_heading">Youth of Enterprise</div>
         <div class="card_description">
-          EnterpriseNGR Internship programme aimed at empowering the next generation of workplace talent.
+          EnterpriseNGR’s Internship programme aimed at empowering the next generation of workplace talent.
         </div>
         <a href="/greenstart.html"><button class="md_btn">
           <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: black;"
