--- a/member.html
+++ b/member.html
@@ -97,8 +97,8 @@
           <div class="item">
             <div class="md_heading">Ordinary Members</div>
             <div class="thin">
-              Ordinary Members pay annual membership subscription ranging from
-              NGN1M to NGN10M.
+              The Ordinary Members’ class is categorised into Gold, Silver and
+              Bronze, and is subject to annual membership subscription.
             </div>
           </div>
         </div>
@@ -150,7 +150,7 @@
             <div class="thin">
               Members are at the forefront of EnterpriseNGR’s advocacy and have
               the opportunity to influence policy by engaging government,
-              policymakers, and senior stakeholders on key issues facing the
+              policymakers, and senior stakeholders on key issues facing
               Nigeria’s Financial and Professional Services sector.
             </div>
           </div>
@@ -160,7 +160,7 @@
             <div class="thin">
               EnterpriseNGR hosts events to engage with key stakeholders and
               position the sector in line with its objective to be the Financial
-              Centre for Africa. Members have the opportunity to host and attend
+              Center for Africa. Members have the opportunity to host and attend
               EnterpriseNGR events in varying capacities.
             </div>
           </div>
@@ -377,8 +377,9 @@
           <div>Voice of Enterprise</div>
         </div>
         <div class="thin">
-          Annual event that brings together key Nigerian and global industry
-          stakeholders and policy makers from all levels of government.
+          An Annual EnterpriseNGR event to engage key industry stakeholders
+          (both globally and in Nigeria) as well as policymakers at all levels
+          of government.
         </div>
         <a href="/greenstart.html"
           ><button class="md_btn">
