--- a/policy.html
+++ b/policy.html
@@ -74,13 +74,15 @@
               <img src="/images/stateofngr.jpg" alt="" />
             </div>
             <div class="thin date">23 March, 2022 | EnterpriseNGR</div>
-            <div class="bold title">March 2022 Policy Insights</div>
+            <div class="bold title">
+              Environmental, Social and Governance - the Urgency of the
+              Implementation
+            </div>
             <div class="text">
               <div class="thin description">
                 There is growing attention on Environmental, Social and
-                Governance, or ESG for short, around the globe, just as various
-                stakeholders, including investors, companies, regulatory
-                bodies...
+                Governance, or ESG for short, around the globe, just as
+                various...
               </div>
               <a href="policyinsight.html">
                 <button class="md_btn">
