--- a/about.html
+++ b/about.html
@@ -61,9 +61,8 @@
             subsectors.
             <br />
             <br />
-            Our goal is to support the growth and development of the Nigerian
-            financial and professional services sector, the economy, and our
-            members.
+            Our goal is to support the growth and development of Nigeria’s
+            Financial and Professional Services sector and the economy.
           </div>
           <!-- <div class="bold">
             Our goal is to support the growth and development of the Nigerian
@@ -73,21 +72,22 @@
           <div class="thin">
             <p>
               Nigeria’s Financial and Professional Services (FPS) sector
-              contributes majorly to the nation’s economic growth and hence is
-              crucial to enabling the positive development of the economy. Yet,
-              amongst the many subsectors within Nigeria’s FPS, only the banking
-              subsector has made giant strides in the last few decades achieving
-              about 60% penetration in Nigeria with strong African footprints
-              and international presence in key financial markets.
+              contributes significantly to the nation’s economic growth and
+              hence is crucial to enabling the positive development of the
+              economy. Yet, amongst the many subsectors within Nigeria’s FPS,
+              only the banking subsector has made giant strides in the last few
+              decades achieving about 60% penetration in Nigeria with strong
+              African footprints and international presence in key financial
+              markets.
             </p>
             <br />
             <p>
               This growth needs to be sustained and replicated across other
-              subsectors if we hope to advance the impact of the FPS, greatly
-              strengthen the economy, and position the sector as a prime
-              financial center for Africa. To do this, the sector needs an
-              enabling and stable policy environment built, grown, and
-              maintained by deliberate effort.
+              subsectors if we are to advance the impact of the FPS, greatly
+              strengthen the economy, and position Nigeria as a prime financial
+              center for Africa. To do this, the sector needs an enabling and
+              stable policy environment built, grown, and maintained by
+              deliberate effort.
             </p>
             <br />
             <p>This is where EnterpriseNGR comes in.</p>
@@ -139,12 +139,12 @@
             <div class="md_heading">Supporting the formation of policies</div>
             <div class="thin">
               As a consolidated advocacy group, we support government and
-              regulators in the formation of policies that improve the financial
-              inclusion and performance of FPS sector operators in Nigeria.
-              These policies will result in increased tax receipts for the
-              government, increased credit to the real sector, and overall
-              increased employment opportunities. We take pride in doing this
-              while protecting the interest of our members.
+              regulators in the formation of policies that improve the
+              performance of FPS sector operators in Nigeria. These policies
+              will result in increased tax receipts for the government,
+              increased credit to the real sector, and overall increased
+              employment opportunities. We take pride in advocating for the FPS
+              sector and the interest of our members.
             </div>
           </div>
         </div>
@@ -162,7 +162,7 @@
               advocacy group, registered as a company limited by guarantee and
               established to promote and advocate for the Financial and
               Professional Services (“FPS”) sector of Nigeria, with a view to
-              transforming Nigeria into the premier financial services centre in
+              transforming Nigeria into the premier financial services center in
               Africa. The FPS sector includes Banking, Insurance, Pensions,
               Capital Market Operators, Asset Management, Exchanges,
               Depositories, Clearing Houses, Law, Accountancy, and Management
@@ -188,12 +188,12 @@
             <br />
             <p>
               As a consolidated advocacy group, we support government and
-              regulators in the formation of policies that improve financial
-              inclusion and the performance of FPS sector operators in Nigeria.
-              These policies will result in increased tax receipts for the
-              government, increased credit to the real sector, and overall
-              increased employment opportunities. We take pride in advocating
-              for the FPS sector and the interest of our members.
+              regulators in the formation of policies that improve the
+              performance of FPS sector operators in Nigeria. These policies
+              will result in increased tax receipts for the government,
+              increased credit to the real sector, and overall increased
+              employment opportunities. We take pride in advocating for the FPS
+              sector and the interest of our members.
             </p>
           </div>
         </div>
@@ -274,7 +274,7 @@
               <div class="image">
                 <img src="/images/aigboje.png" alt="" />
               </div>
-              <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
+              <div class="sm_heading">Aigboje Aig-Imoukhuede CON</div>
               <div class="bold">Chairman</div>
               <div class="bold">Founder, Tengen Family Office</div>
             </div>
@@ -301,7 +301,7 @@
               <div class="image">
                 <img src="/images/bola.png" alt="Bola Onadele" />
               </div>
-              <div class="sm_heading">Bola Onadele.Koko.</div>
+              <div class="sm_heading">Bola Onadele.Koko</div>
               <div class="bold">Director</div>
               <div class="bold">CEO, FMDQ Group</div>
             </div>
@@ -319,7 +319,7 @@
               <div class="image">
                 <img src="images/gbenga.png" alt="" />
               </div>
-              <div class="sm_heading">Gbenga Oyebode</div>
+              <div class="sm_heading">Gbenga Oyebode MFR</div>
               <div class="bold">Director</div>
               <div class="bold">Of Counsel, Aluko & Oyebode</div>
             </div>
@@ -330,14 +330,14 @@
               </div>
               <div class="sm_heading">Kayode Akinkugbe</div>
               <div class="bold">Director</div>
-              <div class="bold">MD/CEO, FBNQuest Merchant Bank Ltd</div>
+              <div class="bold">MD/CEO, FBNQuest Merchant Bank Ltd.</div>
             </div>
 
             <div class="card">
               <div class="image">
                 <img src="/images/oscar.png" alt="" />
               </div>
-              <div class="sm_heading">Oscar Onyema</div>
+              <div class="sm_heading">Oscar N. Onyema OON</div>
               <div class="bold">Director</div>
               <div class="bold">Group CEO, NGX Group</div>
             </div>
@@ -415,7 +415,7 @@
             <img src="/images/aigboje.png" alt="Aigboje Aig-Imoukhuede" />
           </div>
           <div>
-            <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
+            <div class="sm_heading">Aigboje Aig-Imoukhuede CON</div>
             <div class="bold">Chairman</div>
             <div class="bold">Founder, Tengen Family Office</div>
             <div class="thin">
@@ -517,9 +517,9 @@
             <img src="/images/gbenga.png" alt="Gbenga Oyebode" />
           </div>
           <div>
-            <div class="sm_heading">Gbenga Oyebode</div>
+            <div class="sm_heading">Gbenga Oyebode MFR</div>
             <div class="bold">Director</div>
-            <div class="bold">Aluko & Oyebode</div>
+            <div class="bold">Of Counsel, Aluko & Oyebode</div>
             <div class="thin">
               Gbenga Oyebode is the co-founder of Aluko & Oyebode.
             </div>
@@ -555,7 +555,7 @@
             <img src="/images/oscar.png" alt="Oscar Onyema" />
           </div>
           <div>
-            <div class="sm_heading">Oscar Onyema</div>
+            <div class="sm_heading">Oscar N. Onyema OON</div>
             <div class="bold">Director</div>
             <div class="bold">Group CEO, NGX Group</div>
             <div class="thin">
@@ -702,7 +702,7 @@
           </div>
           <div>
             <div class="sm_heading">Oge Nnaife</div>
-            <div class="bold">Head of Programmes</div>
+            <div class="bold">Head, Programmes</div>
 
             <div class="thin">Oge is the Head of Programmes.</div>
           </div>
@@ -730,8 +730,8 @@
           <div>Voice of Enterprise</div>
         </div>
         <div class="thin">
-          Annual event that brings together key Nigerian and global industry
-          stakeholders and policy makers from all levels of government.
+          An annual event that brings together key Nigerian and global industry
+          stakeholders and policy makers from all levels of government
         </div>
         <a href="/greenstart.html"
           ><button class="md_btn">
@@ -769,8 +769,7 @@
         <div class="membership_text">
           <div class="text">
             Join our network of members at the forefront of advancing the
-            development and transformation of Nigeria’s Financial and
-            Professional Services (FPS) Sector.
+            development and transformation of Nigeria.
           </div>
           <a href="/member.html">
             <button class="md_btn">
