--- a/about.html
+++ b/about.html
@@ -217,7 +217,7 @@
         <div class="sm_heading">Vision</div>
         <div class="thin">
           To advance Nigeria’s transformation as Africa’s premier financial
-          services centre.
+          services center.
         </div>
       </div>
 
@@ -747,7 +747,7 @@
       </div>
       <div class="green">
         <div>JOIN NOW</div>
-        <div class="md_heading">Monthly Newsletter</div>
+        <div class="md_heading">Monthly E-Newsletter</div>
         <form action="">
           <input type="email" placeholder="Enter your email address" />
           <button class="md_btn">
