--- a/greenstart.html
+++ b/greenstart.html
@@ -93,7 +93,7 @@
                 style="color: #40ba7b"
                 data-width="26"
               ></span
-              >On-the-job Training
+              >On-the-job training
             </li>
             <li>
               <span
@@ -282,7 +282,7 @@
                 style="color: #40ba7b"
                 data-width="26"
               ></span>
-              <span class="text">Assessments and Screening </span>
+              <span class="text">Assessments and Screening</span>
             </li>
           </ul>
         </div>
@@ -300,7 +300,7 @@
                 style="color: #40ba7b"
                 data-width="26"
               ></span>
-              <span class="text">Robust Curriculum </span>
+              <span class="text">Robust Curriculum</span>
             </li>
 
             <li>
@@ -321,7 +321,7 @@
                 style="color: #40ba7b"
                 data-width="26"
               ></span>
-              <span class="text">Reading and Teaming Activities </span>
+              <span class="text">Reading and Team Activities </span>
             </li>
           </ul>
         </div>
@@ -357,7 +357,7 @@
                 style="color: #40ba7b"
                 data-width="26"
               ></span>
-              <span class="text">Post internship support </span>
+              <span class="text">Post internship support</span>
             </li>
             <li>
               <span
@@ -375,7 +375,7 @@
 
     <div class="agenda_wrapper main">
       <section class="manifesto">
-        <div class="sm_heading">OUR COMMITMENT</div>
+        <div class="sm_heading">OUR COMMITTMENT</div>
         <div class="md_heading">YOE is EnterpriseNGR’s commitment to:</div>
         <div>
           <ul>
@@ -387,7 +387,7 @@
                 data-width="26"
               ></span>
               <span class="text"
-                >Empower the next generation of workplace talent.</span
+                >Empower the next generation of workplace talent</span
               >
             </li>
             <li>
@@ -397,7 +397,7 @@
                 style="color: #40ba7b"
                 data-width="26"
               ></span>
-              <span class="text">Create meaningful work experiences.</span>
+              <span class="text">Create meaningful work experiences</span>
             </li>
             <li>
               <span
@@ -407,7 +407,7 @@
                 data-width="26"
               ></span>
               <span class="text"
-                >Foster an Ecosystem of support and networking.</span
+                >Foster an ecosystem of support and networking</span
               >
             </li>
             <li>
@@ -417,7 +417,7 @@
                 style="color: #40ba7b"
                 data-width="26"
               ></span>
-              <span class="text">Curate opportunities for our interns.</span>
+              <span class="text">Curate opportunities for our interns</span>
             </li>
             <li>
               <span
@@ -426,7 +426,7 @@
                 style="color: #40ba7b"
                 data-width="26"
               ></span>
-              <span class="text">Build capacity for future growth.</span>
+              <span class="text">Build capacity for future growth</span>
             </li>
           </ul>
         </div>
@@ -440,9 +440,9 @@
               <div>Voice of Enterprise</div>
             </div>
             <div class="thin">
-              Annual EnterpriseNGR event to engage key industry stakeholders
-              (both globally and in Nigeria) as well as policymakers at all
-              levels of government.
+              An annual event that brings together key Nigerian and global
+              industry stakeholders and policy makers from all levels of
+              government.
             </div>
             <a href="/greenstart.html"
               ><button class="md_btn">
@@ -458,7 +458,7 @@
           </div>
           <div class="green">
             <div>JOIN NOW</div>
-            <div class="md_heading">Monthly Newsletter</div>
+            <div class="md_heading">Monthly E-Newsletter</div>
             <form action="">
               <input type="email" placeholder="Enter your email address" />
               <button class="md_btn">
