--- a/member.html
+++ b/member.html
@@ -297,11 +297,11 @@
     </section>
 
     <section class="join">
-      <div class="sm_heading">HOW TO JOIN</div>
       <div class="md_heading">Take the Next Step to Join</div>
       <div class="thin">
         Join our network of members at the forefront of advancing the
-        development and transformation of Nigeria.
+        development and transformation of Nigeria’s Financial and Professional
+        Services (FPS) Sector.
       </div>
 
       <div>
@@ -377,9 +377,8 @@
           <div>Voice of Enterprise</div>
         </div>
         <div class="thin">
-          An Annual EnterpriseNGR event to engage key industry stakeholders
-          (both globally and in Nigeria) as well as policymakers at all levels
-          of government.
+          An annual event that brings together key Nigerian and global industry
+          stakeholders and policy makers from all levels of government
         </div>
         <a href="/greenstart.html"
           ><button class="md_btn">
@@ -395,7 +394,7 @@
       </div>
       <div class="green">
         <div>JOIN NOW</div>
-        <div class="md_heading">Monthly Newsletter</div>
+        <div class="md_heading">Monthly E-Newsletter</div>
         <form action="">
           <input type="email" placeholder="Enter your email address" />
           <button class="md_btn">
