--- a/member.html
+++ b/member.html
@@ -324,7 +324,7 @@
         <div class="sm_heading">KEEP UP TO DATE</div>
         <div class="md_heading">Latest News</div>
         <div class="thin">
-          The latest news from EnterpriseNGR and the financial services sector.
+          The latest news from EnterpriseNGR and the FPS sector.
         </div>
         <div class="cards">
           <!-- <div class="card">
