--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <div>Voice of Enterprise</div>
       </div>
       <div class="thin">
-        Annual event that brings together key Nigerian and global industry stakeholders and policy makers from all levels of government.
+        An annual event that brings together key Nigerian and global industry stakeholders and policy makers from all levels of governmentAn annual event that brings together key Nigerian and global industry stakeholders and policy makers from all levels of government
       </div>
       <a href="/greenstart.html"><button class="md_btn">
         <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: black;" data-width="26"></span><span
@@ -231,7 +231,7 @@
     </div>
     <div class="green">
       <div>JOIN NOW</div>
-      <div class="md_heading">Monthly Newsletter</div>
+      <div class="md_heading">Monthly E-Newsletter</div>
       <form action="">
         <input type="email" placeholder="Enter your email address" />
         <button class="md_btn"><span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: #40ba7b;" data-width="26"></span><span
@@ -277,7 +277,9 @@
       <div class="md_heading">Membership</div>
       <div class="membership_text">
         <div class="text">
-          Join our network of members at the forefront of advancing the development and transformation of Nigeria’s Financial and Professional Services (FPS) Sector.
+          Join our network of members at the forefront of advancing 
+          the development and transformation of Nigeria’s 
+          Financial and Professional Services (FPS) Sector.
         </div>
         <a href="/member.html"><button class="md_btn">
           <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: #40ba7b;"
