--- a/member.html
+++ b/member.html
@@ -104,7 +104,7 @@
         </div>
 
         <div class="btn_all">
-          <a href="/about.html"
+          <a href=""
             ><button class="big_btn all">
               <span
                 class="iconify-inline"
